--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/nextjs": "^6.11.0",
+    "@clerk/types": "^4.46.1",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "framer-motion": "^12.0.6",
-    "fumadocs-core": "14.7.7",
+    "fumadocs-core": "^14.7.7",
     "fumadocs-mdx": "11.3.1",
     "fumadocs-ui": "14.7.7",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.9.7",
     "motion": "^12.0.5",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
