--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "svix": "^1.45.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.13",
