--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "styled-components": "^6.1.15",
     "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.3"
