--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@clerk/nextjs": "^6.11.0",
     "@clerk/types": "^4.46.1",
+    "@splinetool/react-spline": "^4.0.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
