--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fumadocs-core": "^14.7.7",
     "fumadocs-mdx": "11.3.1",
     "fumadocs-ui": "14.7.7",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.13.0",
