--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "mongoose": "^8.9.7",
     "motion": "^12.0.5",
     "next": "15.1.5",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.15",
     "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
